// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`REST endpoint testing for /admin/recipe create item when logged in as an admin and the item is valid Returns the expected result 1`] = `
Object {
  "imageUrlSmall": "http://image.com",
  "isVegan": true,
  "isVegetarian": false,
  "languages": Array [
    "en-US",
  ],
  "linkUrl": "http://new.com",
  "name": "new-recipe",
  "primaryFoodInRecipeIds": Array [
    "f6a680ee-6d6e-4c42-a99d-15e575c32c20",
  ],
  "secondaryFoodInRecipeIds": Array [
    "dd9ba012-8f8e-48af-9775-0139374dd94c",
  ],
}
`;

exports[`REST endpoint testing for /admin/recipe delete item when logged in as an admin Returns the expected result 1`] = `
Object {
  "imageUrlSmall": "http://image.com",
  "isVegan": true,
  "isVegetarian": false,
  "languages": Array [
    "en-US",
  ],
  "linkUrl": "http://new.com",
  "name": "new-recipe",
  "primaryFoodInRecipeIds": Array [
    "f6a680ee-6d6e-4c42-a99d-15e575c32c20",
  ],
  "secondaryFoodInRecipeIds": Array [
    "dd9ba012-8f8e-48af-9775-0139374dd94c",
  ],
}
`;

exports[`REST endpoint testing for /admin/recipe edit item when logged in as an admin Returns the expected result 1`] = `
Object {
  "imageUrlSmall": "http://image-edited.com",
  "isVegan": false,
  "isVegetarian": true,
  "languages": Array [
    "en-GB",
  ],
  "linkUrl": "http://new-thing.com",
  "name": "new-recipe-edited",
  "primaryFoodInRecipeIds": Array [
    "f6a680ee-6d6e-4c42-a99d-15e575c32c20",
    "dd9ba012-8f8e-48af-9775-0139374dd94c",
  ],
  "secondaryFoodInRecipeIds": Array [
    "dd9ba012-8f8e-48af-9775-0139374dd94c",
    "f6a680ee-6d6e-4c42-a99d-15e575c32c20",
  ],
}
`;

exports[`REST endpoint testing for /admin/recipe get all when logged in as an admin Returns the expected result 1`] = `
Array [
  Object {
    "id": "053c46cd-584e-46c5-a70d-b79b9ded3cca",
    "imageUrlSmall": "https://eat-seasonal.co.uk/images/food/broccoli.jpg",
    "isVegan": false,
    "isVegetarian": false,
    "languages": Array [
      "en_US",
      "en_GB",
    ],
    "linkUrl": "https://apple-beetroot-and-cheese.com",
    "name": "Apple, Beetroot & Meat",
    "primaryFoodInRecipeIds": Array [
      "dd9ba012-8f8e-48af-9775-0139374dd94c",
      "f6a680ee-6d6e-4c42-a99d-15e575c32c20",
    ],
    "secondaryFoodInRecipeIds": Array [],
  },
  Object {
    "id": "fefc209f-ddaf-465d-941f-fe3fefa6b931",
    "imageUrlSmall": "https://apple-and-cheese.com/image",
    "isVegan": false,
    "isVegetarian": true,
    "languages": Array [
      "en_US",
      "en_GB",
    ],
    "linkUrl": "https://apple-and-cheese.com",
    "name": "Apple, Cheese & Onion",
    "primaryFoodInRecipeIds": Array [
      "dd9ba012-8f8e-48af-9775-0139374dd94c",
    ],
    "secondaryFoodInRecipeIds": Array [
      "d1df368e-6ed1-4a50-bb7d-6163c15df1d3",
    ],
  },
  Object {
    "id": "0f7fb18e-ac1d-4023-b315-91ca7e29ce4a",
    "imageUrlSmall": "https://eat-seasonal.co.uk/images/food/broccoli.jpg",
    "isVegan": true,
    "isVegetarian": false,
    "languages": Array [
      "en_US",
      "en_GB",
    ],
    "linkUrl": "https://pickled-beetroot.com",
    "name": "Pasta with a Beetroot sauce",
    "primaryFoodInRecipeIds": Array [
      "f6a680ee-6d6e-4c42-a99d-15e575c32c20",
    ],
    "secondaryFoodInRecipeIds": Array [],
  },
]
`;

exports[`REST endpoint testing for /admin/recipe get single item when logged in as an admin Returns the expected result 1`] = `
Object {
  "id": "fefc209f-ddaf-465d-941f-fe3fefa6b931",
  "imageUrlSmall": "https://apple-and-cheese.com/image",
  "isVegan": false,
  "isVegetarian": true,
  "languages": Array [
    "en_US",
    "en_GB",
  ],
  "linkUrl": "https://apple-and-cheese.com",
  "name": "Apple, Cheese & Onion",
  "primaryFoodInRecipeIds": Array [
    "dd9ba012-8f8e-48af-9775-0139374dd94c",
  ],
  "secondaryFoodInRecipeIds": Array [
    "d1df368e-6ed1-4a50-bb7d-6163c15df1d3",
  ],
}
`;
